# cplus_Template

./: .gitignore  CMakeLists.txt
docs/: c++_test.md  helper.md
include/: MockUser.h  Singleton.h  User.h
include/gmock/: gmock-spec-builders.h
src/: Singleton.cpp  User.cpp  main.cpp
